--- a/English.lproj/BackingView.xib
+++ b/English.lproj/BackingView.xib
@@ -2,23 +2,15 @@
 <archive type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="8.00">
 	<data>
 		<int key="IBDocument.SystemTarget">1060</int>
-		<string key="IBDocument.SystemVersion">11B26</string>
-		<string key="IBDocument.InterfaceBuilderVersion">1617</string>
-		<string key="IBDocument.AppKitVersion">1138</string>
-		<string key="IBDocument.HIToolboxVersion">566.00</string>
+		<string key="IBDocument.SystemVersion">11C74</string>
+		<string key="IBDocument.InterfaceBuilderVersion">851</string>
+		<string key="IBDocument.AppKitVersion">1138.23</string>
+		<string key="IBDocument.HIToolboxVersion">567.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.CocoaPlugin</string>
-			<string key="NS.object.0">1617</string>
+			<string key="NS.object.0">851</string>
 		</object>
-		<array key="IBDocument.IntegratedClassDependencies">
-			<string>NSCustomObject</string>
-			<string>NSCustomView</string>
-			<string>NSButtonCell</string>
-			<string>NSImageCell</string>
-			<string>NSImageView</string>
-			<string>NSButton</string>
-			<string>NSBox</string>
-		</array>
+		<array class="NSMutableArray" key="IBDocument.EditedObjectIDs"/>
 		<array key="IBDocument.PluginDependencies">
 			<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 		</array>
@@ -34,7 +26,7 @@
 				<string key="NSClassName">NSApplication</string>
 			</object>
 			<object class="NSCustomView" id="93727628">
-				<reference key="NSNextResponder"/>
+				<nil key="NSNextResponder"/>
 				<int key="NSvFlags">4370</int>
 				<array class="NSMutableArray" key="NSSubviews">
 					<object class="NSBox" id="545855797">
@@ -54,14 +46,12 @@
 												<int key="NSvFlags">274</int>
 												<string key="NSFrameSize">{817, 465}</string>
 												<reference key="NSSuperview" ref="274727585"/>
-												<reference key="NSWindow"/>
 												<reference key="NSNextKeyView" ref="208882678"/>
 												<int key="NSViewLayerContentsRedrawPolicy">2</int>
 											</object>
 										</array>
 										<string key="NSFrameSize">{817, 465}</string>
 										<reference key="NSSuperview" ref="675648047"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="494773134"/>
 										<int key="NSViewLayerContentsRedrawPolicy">2</int>
 										<string key="NSOffsets">{0, 0}</string>
@@ -72,7 +62,7 @@
 											<object class="NSFont" key="NSSupport" id="26">
 												<string key="NSName">LucidaGrande</string>
 												<double key="NSSize">11</double>
-												<int key="NSfFlags">3100</int>
+												<int key="NSfFlags">3088</int>
 											</object>
 											<object class="NSColor" key="NSBackgroundColor" id="545443237">
 												<int key="NSColorSpace">6</int>
@@ -115,7 +105,6 @@
 														</set>
 														<string key="NSFrame">{{31, 100}, {421, 205}}</string>
 														<reference key="NSSuperview" ref="866118483"/>
-														<reference key="NSWindow"/>
 														<reference key="NSNextKeyView" ref="183957451"/>
 														<int key="NSViewLayerContentsRedrawPolicy">2</int>
 														<bool key="NSEnabled">YES</bool>
@@ -138,7 +127,6 @@
 														<int key="NSvFlags">268</int>
 														<string key="NSFrame">{{245, 172}, {183, 28}}</string>
 														<reference key="NSSuperview" ref="866118483"/>
-														<reference key="NSWindow"/>
 														<reference key="NSNextKeyView" ref="925887045"/>
 														<int key="NSViewLayerContentsRedrawPolicy">2</int>
 														<bool key="NSEnabled">YES</bool>
@@ -149,7 +137,7 @@
 															<object class="NSFont" key="NSSupport" id="982911427">
 																<string key="NSName">LucidaGrande</string>
 																<double key="NSSize">13</double>
-																<int key="NSfFlags">1044</int>
+																<int key="NSfFlags">1040</int>
 															</object>
 															<reference key="NSControlView" ref="183957451"/>
 															<int key="NSButtonFlags">-2038284033</int>
@@ -165,7 +153,6 @@
 														<int key="NSvFlags">268</int>
 														<string key="NSFrame">{{245, 140}, {183, 28}}</string>
 														<reference key="NSSuperview" ref="866118483"/>
-														<reference key="NSWindow"/>
 														<reference key="NSNextKeyView" ref="73992133"/>
 														<int key="NSViewLayerContentsRedrawPolicy">2</int>
 														<bool key="NSEnabled">YES</bool>
@@ -188,7 +175,6 @@
 														<int key="NSvFlags">268</int>
 														<string key="NSFrame">{{245, 108}, {183, 28}}</string>
 														<reference key="NSSuperview" ref="866118483"/>
-														<reference key="NSWindow"/>
 														<reference key="NSNextKeyView" ref="377340515"/>
 														<int key="NSViewLayerContentsRedrawPolicy">2</int>
 														<bool key="NSEnabled">YES</bool>
@@ -211,7 +197,6 @@
 														<int key="NSvFlags">268</int>
 														<string key="NSFrame">{{245, 76}, {183, 28}}</string>
 														<reference key="NSSuperview" ref="866118483"/>
-														<reference key="NSWindow"/>
 														<reference key="NSNextKeyView" ref="219131648"/>
 														<int key="NSViewLayerContentsRedrawPolicy">2</int>
 														<bool key="NSEnabled">YES</bool>
@@ -234,7 +219,6 @@
 														<int key="NSvFlags">268</int>
 														<string key="NSFrame">{{245, 44}, {183, 28}}</string>
 														<reference key="NSSuperview" ref="866118483"/>
-														<reference key="NSWindow"/>
 														<reference key="NSNextKeyView" ref="562179527"/>
 														<int key="NSViewLayerContentsRedrawPolicy">2</int>
 														<bool key="NSEnabled">YES</bool>
@@ -257,8 +241,6 @@
 														<int key="NSvFlags">268</int>
 														<string key="NSFrame">{{245, 12}, {183, 28}}</string>
 														<reference key="NSSuperview" ref="866118483"/>
-														<reference key="NSWindow"/>
-														<reference key="NSNextKeyView"/>
 														<int key="NSViewLayerContentsRedrawPolicy">2</int>
 														<bool key="NSEnabled">YES</bool>
 														<object class="NSButtonCell" key="NSCell" id="1004225852">
@@ -279,14 +261,12 @@
 												</array>
 												<string key="NSFrameSize">{530, 312}</string>
 												<reference key="NSSuperview" ref="208882678"/>
-												<reference key="NSWindow"/>
 												<reference key="NSNextKeyView" ref="15647591"/>
 												<int key="NSViewLayerContentsRedrawPolicy">2</int>
 											</object>
 										</array>
 										<string key="NSFrame">{{116, 117}, {530, 312}}</string>
 										<reference key="NSSuperview" ref="675648047"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="866118483"/>
 										<int key="NSViewLayerContentsRedrawPolicy">2</int>
 										<string key="NSOffsets">{0, 0}</string>
@@ -310,14 +290,12 @@
 								</array>
 								<string key="NSFrameSize">{817, 465}</string>
 								<reference key="NSSuperview" ref="545855797"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="274727585"/>
 								<int key="NSViewLayerContentsRedrawPolicy">2</int>
 							</object>
 						</array>
 						<string key="NSFrameSize">{817, 465}</string>
 						<reference key="NSSuperview" ref="93727628"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="675648047"/>
 						<bool key="NSViewIsLayerTreeHost">YES</bool>
 						<int key="NSViewLayerContentsRedrawPolicy">2</int>
@@ -345,8 +323,6 @@
 					</object>
 				</array>
 				<string key="NSFrameSize">{817, 465}</string>
-				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="545855797"/>
 				<bool key="NSViewIsLayerTreeHost">YES</bool>
 				<int key="NSViewLayerContentsRedrawPolicy">2</int>
@@ -704,8 +680,8 @@
 					<string key="superclassName">NSDocument</string>
 					<dictionary class="NSMutableDictionary" key="actions">
 						<string key="actionSwitchViewToBackingView:">id</string>
-						<string key="actionSwitchViewToBrowserView:">id</string>
 						<string key="actionSwitchViewToDifferencesView:">id</string>
+						<string key="actionSwitchViewToFilesView:">id</string>
 						<string key="actionSwitchViewToHistoryView:">id</string>
 						<string key="actionTestListingItem:">id</string>
 						<string key="doLinkUp:">id</string>
@@ -748,12 +724,12 @@
 							<string key="name">actionSwitchViewToBackingView:</string>
 							<string key="candidateClassName">id</string>
 						</object>
-						<object class="IBActionInfo" key="actionSwitchViewToBrowserView:">
-							<string key="name">actionSwitchViewToBrowserView:</string>
-							<string key="candidateClassName">id</string>
-						</object>
 						<object class="IBActionInfo" key="actionSwitchViewToDifferencesView:">
 							<string key="name">actionSwitchViewToDifferencesView:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="actionSwitchViewToFilesView:">
+							<string key="name">actionSwitchViewToFilesView:</string>
 							<string key="candidateClassName">id</string>
 						</object>
 						<object class="IBActionInfo" key="actionSwitchViewToHistoryView:">
@@ -1178,6 +1154,7 @@
 			<integer value="1060" key="NS.object.0"/>
 		</object>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
+		<nil key="IBDocument.LastKnownRelativeProjectPath"/>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
 		<object class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
 			<string key="NS.key.0">MacHgSplash</string>
