--- a/English.lproj/RebaseSheet.xib
+++ b/English.lproj/RebaseSheet.xib
@@ -11,7 +11,7 @@
       <string key="NS.object.0">851</string>
     </object>
     <array class="NSMutableArray" key="IBDocument.EditedObjectIDs">
-      <integer value="2"/>
+      <integer value="247"/>
     </array>
     <array key="IBDocument.PluginDependencies">
       <string>com.apple.InterfaceBuilder.CocoaPlugin</string>
@@ -1401,6 +1401,22 @@
           </object>
           <int key="connectionID">354</int>
         </object>
+        <object class="IBConnectionRecord">
+          <object class="IBOutletConnection" key="connection">
+            <string key="label">mainSV</string>
+            <reference key="source" ref="1001"/>
+            <reference key="destination" ref="497465502"/>
+          </object>
+          <int key="connectionID">358</int>
+        </object>
+        <object class="IBConnectionRecord">
+          <object class="IBOutletConnection" key="connection">
+            <string key="label">delegate</string>
+            <reference key="source" ref="497465502"/>
+            <reference key="destination" ref="1001"/>
+          </object>
+          <int key="connectionID">359</int>
+        </object>
       </array>
       <object class="IBMutableOrderedSet" key="objectRecords">
         <array key="orderedObjects">
@@ -1995,9 +2011,9 @@
       </object>
       <dictionary class="NSMutableDictionary" key="flattenedProperties">
         <string key="-3.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
-        <string key="1.IBEditorWindowLastContentRect">{{13, 125}, {1182, 717}}</string>
+        <string key="1.IBEditorWindowLastContentRect">{{13, 414}, {1182, 717}}</string>
         <string key="1.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
-        <string key="1.IBWindowTemplateEditedContentRect">{{13, 125}, {1182, 717}}</string>
+        <string key="1.IBWindowTemplateEditedContentRect">{{13, 414}, {1182, 717}}</string>
         <boolean value="NO" key="1.NSWindowTemplate.visibleAtLaunch"/>
         <boolean value="YES" key="1.windowTemplate.hasMinSize"/>
         <string key="1.windowTemplate.minSize">{700, 500}</string>
@@ -2014,10 +2030,11 @@
         <string key="146.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
         <string key="2.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
         <string key="246.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
-        <string key="247.CustomClassName">NoDividerSplitView</string>
+        <string key="247.CustomClassName">ClippedStandardSplitView</string>
         <string key="247.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
         <string key="248.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
         <string key="249.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+        <string key="250.CustomClassName">StandardSplitView</string>
         <string key="250.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
         <string key="251.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
         <string key="252.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
@@ -2049,6 +2066,7 @@
         <string key="276.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
         <string key="277.CustomClassName">LogTableTextView</string>
         <string key="277.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+        <string key="278.CustomClassName">StandardSplitView</string>
         <string key="278.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
         <string key="279.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
         <string key="280.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
@@ -2137,7 +2155,7 @@
       <nil key="activeLocalization"/>
       <dictionary class="NSMutableDictionary" key="localizations"/>
       <nil key="sourceID"/>
-      <int key="maxID">357</int>
+      <int key="maxID">359</int>
     </object>
     <object class="IBClassDescriber" key="IBDocument.Classes">
       <array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -2150,11 +2168,27 @@
           </object>
         </object>
         <object class="IBPartialClassDescription">
+          <string key="className">ClippedStandardSplitView</string>
+          <string key="superclassName">StandardSplitView</string>
+          <object class="IBClassDescriptionSource" key="sourceIdentifier" id="517306692">
+            <string key="majorKey">IBProjectSource</string>
+            <string key="minorKey">Classes/Sheets/RebaseSheet/RebaseSheetController.h</string>
+          </object>
+        </object>
+        <object class="IBPartialClassDescription">
           <string key="className">CommandKeyTextField</string>
           <string key="superclassName">NSTextField</string>
           <object class="IBClassDescriptionSource" key="sourceIdentifier">
             <string key="majorKey">IBProjectSource</string>
             <string key="minorKey">Classes/UtilityClasses/CommandKeyTextField/CommandKeyTextField.h</string>
+          </object>
+        </object>
+        <object class="IBPartialClassDescription">
+          <string key="className">GradientBox</string>
+          <string key="superclassName">NSView</string>
+          <object class="IBClassDescriptionSource" key="sourceIdentifier">
+            <string key="majorKey">IBProjectSource</string>
+            <string key="minorKey">Classes/UtilityClasses/GradientBox/GradientBox.h</string>
           </object>
         </object>
         <object class="IBPartialClassDescription">
@@ -2190,6 +2224,7 @@
           <string key="className">LogTableView</string>
           <string key="superclassName">NSTableView</string>
           <dictionary class="NSMutableDictionary" key="actions">
+            <string key="getAndScrollToChangeset:">id</string>
             <string key="refreshTable:">id</string>
             <string key="resetTable:">id</string>
             <string key="scrollToBeginning:">id</string>
@@ -2198,6 +2233,10 @@
             <string key="scrollToSelected:">id</string>
           </dictionary>
           <dictionary class="NSMutableDictionary" key="actionInfosByName">
+            <object class="IBActionInfo" key="getAndScrollToChangeset:">
+              <string key="name">getAndScrollToChangeset:</string>
+              <string key="candidateClassName">id</string>
+            </object>
             <object class="IBActionInfo" key="refreshTable:">
               <string key="name">refreshTable:</string>
               <string key="candidateClassName">id</string>
@@ -2240,11 +2279,19 @@
           <reference key="sourceIdentifier" ref="54717744"/>
         </object>
         <object class="IBPartialClassDescription">
-          <string key="className">NSObject</string>
+          <string key="className">NSApplication</string>
           <object class="IBClassDescriptionSource" key="sourceIdentifier" id="235826209">
             <string key="majorKey">IBProjectSource</string>
             <string key="minorKey">Classes/General/Common.h</string>
           </object>
+        </object>
+        <object class="IBPartialClassDescription">
+          <string key="className">NSObject</string>
+          <reference key="sourceIdentifier" ref="235826209"/>
+        </object>
+        <object class="IBPartialClassDescription">
+          <string key="className">NSResponder</string>
+          <reference key="sourceIdentifier" ref="235826209"/>
         </object>
         <object class="IBPartialClassDescription">
           <string key="className">NSTableView</string>
@@ -2255,20 +2302,8 @@
           <reference key="sourceIdentifier" ref="235826209"/>
         </object>
         <object class="IBPartialClassDescription">
-          <string key="className">NoDividerSplitView</string>
-          <string key="superclassName">NSSplitView</string>
-          <object class="IBClassDescriptionSource" key="sourceIdentifier" id="517306692">
-            <string key="majorKey">IBProjectSource</string>
-            <string key="minorKey">Classes/Sheets/RebaseSheet/RebaseSheetController.h</string>
-          </object>
-        </object>
-        <object class="IBPartialClassDescription">
-          <string key="className">NoDividerSplitView</string>
-          <string key="superclassName">NSSplitView</string>
-          <object class="IBClassDescriptionSource" key="sourceIdentifier">
-            <string key="majorKey">IBUserSource</string>
-            <string key="minorKey"/>
-          </object>
+          <string key="className">NSWindow</string>
+          <reference key="sourceIdentifier" ref="235826209"/>
         </object>
         <object class="IBPartialClassDescription">
           <string key="className">RebaseSheetController</string>
@@ -2300,6 +2335,7 @@
             <string key="destinationTop">NSView</string>
             <string key="detailedDestinationEntryTextView">NSTextView</string>
             <string key="detailedSourceEntryTextView">NSTextView</string>
+            <string key="mainSV">NSSplitView</string>
             <string key="okButton">NSButton</string>
             <string key="rebaseSheetTitle">NSTextField</string>
             <string key="sheetInformativeMessageTextField">NSTextField</string>
@@ -2338,6 +2374,10 @@
             <object class="IBToOneOutletInfo" key="detailedSourceEntryTextView">
               <string key="name">detailedSourceEntryTextView</string>
               <string key="candidateClassName">NSTextView</string>
+            </object>
+            <object class="IBToOneOutletInfo" key="mainSV">
+              <string key="name">mainSV</string>
+              <string key="candidateClassName">NSSplitView</string>
             </object>
             <object class="IBToOneOutletInfo" key="okButton">
               <string key="name">okButton</string>
@@ -2408,6 +2448,14 @@
             <string key="minorKey">Classes/UtilityClasses/ScrollToForLogTable/ScrollToForLogTable.h</string>
           </object>
         </object>
+        <object class="IBPartialClassDescription">
+          <string key="className">StandardSplitView</string>
+          <string key="superclassName">NSSplitView</string>
+          <object class="IBClassDescriptionSource" key="sourceIdentifier">
+            <string key="majorKey">IBProjectSource</string>
+            <string key="minorKey">Classes/UtilityClasses/StandardSplitView/StandardSplitView.h</string>
+          </object>
+        </object>
       </array>
       <array class="NSMutableArray" key="referencedPartialClassDescriptionsV3.2+">
         <object class="IBPartialClassDescription">
@@ -2459,13 +2507,6 @@
           <object class="IBClassDescriptionSource" key="sourceIdentifier">
             <string key="majorKey">IBFrameworkSource</string>
             <string key="minorKey">AppKit.framework/Headers/NSUserInterfaceItemSearching.h</string>
-          </object>
-        </object>
-        <object class="IBPartialClassDescription">
-          <string key="className">NSApplication</string>
-          <object class="IBClassDescriptionSource" key="sourceIdentifier">
-            <string key="majorKey">IBFrameworkSource</string>
-            <string key="minorKey">BWToolkitFramework.framework/Headers/NSApplication+BWAdditions.h</string>
           </object>
         </object>
         <object class="IBPartialClassDescription">
@@ -2772,6 +2813,55 @@
           <string key="className">NSObject</string>
           <object class="IBClassDescriptionSource" key="sourceIdentifier">
             <string key="majorKey">IBFrameworkSource</string>
+            <string key="minorKey">ImageKit.framework/Headers/IKImageBrowserView.h</string>
+          </object>
+        </object>
+        <object class="IBPartialClassDescription">
+          <string key="className">NSObject</string>
+          <object class="IBClassDescriptionSource" key="sourceIdentifier">
+            <string key="majorKey">IBFrameworkSource</string>
+            <string key="minorKey">ImageKit.framework/Headers/IKSaveOptions.h</string>
+          </object>
+        </object>
+        <object class="IBPartialClassDescription">
+          <string key="className">NSObject</string>
+          <object class="IBClassDescriptionSource" key="sourceIdentifier">
+            <string key="majorKey">IBFrameworkSource</string>
+            <string key="minorKey">ImageKit.framework/Headers/ImageKitDeprecated.h</string>
+          </object>
+        </object>
+        <object class="IBPartialClassDescription">
+          <string key="className">NSObject</string>
+          <object class="IBClassDescriptionSource" key="sourceIdentifier">
+            <string key="majorKey">IBFrameworkSource</string>
+            <string key="minorKey">PDFKit.framework/Headers/PDFDocument.h</string>
+          </object>
+        </object>
+        <object class="IBPartialClassDescription">
+          <string key="className">NSObject</string>
+          <object class="IBClassDescriptionSource" key="sourceIdentifier">
+            <string key="majorKey">IBFrameworkSource</string>
+            <string key="minorKey">PDFKit.framework/Headers/PDFView.h</string>
+          </object>
+        </object>
+        <object class="IBPartialClassDescription">
+          <string key="className">NSObject</string>
+          <object class="IBClassDescriptionSource" key="sourceIdentifier">
+            <string key="majorKey">IBFrameworkSource</string>
+            <string key="minorKey">QuartzComposer.framework/Headers/QCCompositionParameterView.h</string>
+          </object>
+        </object>
+        <object class="IBPartialClassDescription">
+          <string key="className">NSObject</string>
+          <object class="IBClassDescriptionSource" key="sourceIdentifier">
+            <string key="majorKey">IBFrameworkSource</string>
+            <string key="minorKey">QuartzComposer.framework/Headers/QCCompositionPickerView.h</string>
+          </object>
+        </object>
+        <object class="IBPartialClassDescription">
+          <string key="className">NSObject</string>
+          <object class="IBClassDescriptionSource" key="sourceIdentifier">
+            <string key="majorKey">IBFrameworkSource</string>
             <string key="minorKey">QuartzCore.framework/Headers/CAAnimation.h</string>
           </object>
         </object>
@@ -2787,6 +2877,20 @@
           <object class="IBClassDescriptionSource" key="sourceIdentifier">
             <string key="majorKey">IBFrameworkSource</string>
             <string key="minorKey">QuartzCore.framework/Headers/CIImageProvider.h</string>
+          </object>
+        </object>
+        <object class="IBPartialClassDescription">
+          <string key="className">NSObject</string>
+          <object class="IBClassDescriptionSource" key="sourceIdentifier">
+            <string key="majorKey">IBFrameworkSource</string>
+            <string key="minorKey">QuartzFilters.framework/Headers/QuartzFilterManager.h</string>
+          </object>
+        </object>
+        <object class="IBPartialClassDescription">
+          <string key="className">NSObject</string>
+          <object class="IBClassDescriptionSource" key="sourceIdentifier">
+            <string key="majorKey">IBFrameworkSource</string>
+            <string key="minorKey">QuickLookUI.framework/Headers/QLPreviewPanel.h</string>
           </object>
         </object>
         <object class="IBPartialClassDescription">
@@ -2992,13 +3096,6 @@
           <reference key="sourceIdentifier" ref="1055686735"/>
         </object>
         <object class="IBPartialClassDescription">
-          <string key="className">NSView</string>
-          <object class="IBClassDescriptionSource" key="sourceIdentifier">
-            <string key="majorKey">IBFrameworkSource</string>
-            <string key="minorKey">BWToolkitFramework.framework/Headers/NSView+BWAdditions.h</string>
-          </object>
-        </object>
-        <object class="IBPartialClassDescription">
           <string key="className">NSWindow</string>
           <object class="IBClassDescriptionSource" key="sourceIdentifier">
             <string key="majorKey">IBFrameworkSource</string>
@@ -3018,13 +3115,6 @@
           <object class="IBClassDescriptionSource" key="sourceIdentifier">
             <string key="majorKey">IBFrameworkSource</string>
             <string key="minorKey">AppKit.framework/Headers/NSWindowScripting.h</string>
-          </object>
-        </object>
-        <object class="IBPartialClassDescription">
-          <string key="className">NSWindow</string>
-          <object class="IBClassDescriptionSource" key="sourceIdentifier">
-            <string key="majorKey">IBFrameworkSource</string>
-            <string key="minorKey">BWToolkitFramework.framework/Headers/NSWindow+BWAdditions.h</string>
           </object>
         </object>
         <object class="IBPartialClassDescription">
@@ -3058,7 +3148,7 @@
     <string key="IBDocument.LastKnownRelativeProjectPath">../MacHg.xcodeproj</string>
     <int key="IBDocument.defaultPropertyAccessControl">3</int>
     <dictionary class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
-      <string key="ActionDropButtonSizeSmall">{128, 128}</string>
+      <string key="ActionDropButtonSizeSmall">{18, 11}</string>
       <string key="NSSwitch">{15, 15}</string>
     </dictionary>
   </data>
